--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ glam = { version = "0.29", features = ["bytemuck"] }
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Oz", "--enable-bulk-memory"]
+
 [profile.release]
 opt-level = "z"       # optimize for size
 lto = true
